# kontakt4.com

./: README.md  workflow.yaml
cloud/: Cargo.toml  build.rs  lang.proto
cloud/src/: main.rs
talk/: changed.sh  lang.proto  updated.sh
web/: .gitignore  exe-source.js  exe.js  index.html  lang.js  lang_pb.js  package-lock.json  package.json  src_exe.js  style.css
